# dalj

./: .gitignore  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/bornabesic/dalj/: ByteArrayOutputStream2.java  MainActivity.java  StreamService.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
pc/: CMakeLists.txt
pc/src/: CMakeLists.txt  main.cpp
